# advent-of-code-2022

./: .gitignore  Cargo.toml
src/: main.rs
src/aoc/: datafiles.rs  mod.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
