[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dotenv = "0.15.0"
hyper = "0.14.23"
reqwest = { version = "0.11.13", features = ["cookies"] }
tokio = { version = "1.22.0", features = ["full"] }
